--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -3,7 +3,7 @@ FROM python:latest
 RUN mkdir /build
 WORKDIR /build
 
-COPY app/ /build
+COPY app /build
 
 COPY app/requirements.txt /build
 
@@ -11,4 +11,4 @@ RUN pip3 install -r requirements.txt
 
 EXPOSE 5000
 
-CMD ["python", "app.py"]
+CMD [ "python", "app.py" ]
