--- a/kubernetes_manifest/deployment.yml
+++ b/kubernetes_manifest/deployment.yml
@@ -28,6 +28,6 @@ spec:
     spec:
       containers:
       - name: uber-ui
-        image: 912101370089.dkr.ecr.us-east-1.amazonaws.com/uber-test:latest
+        image: 912101370089.dkr.ecr.us-east-1.amazonaws.com/devopsthehardway-ecr-repo:latest
         ports:
         - containerPort: 5000
