--- a/kubernetes_manifest/deployment.yml
+++ b/kubernetes_manifest/deployment.yml
@@ -7,7 +7,7 @@ spec:
     app: uber-ui
   ports:
   - protocol: "TCP"
-    port: 6000
+    port: 80
     targetPort: 5000
   type: LoadBalancer
 
@@ -28,6 +28,21 @@ spec:
     spec:
       containers:
       - name: uber-ui
-        image: 912101370089.dkr.ecr.us-east-1.amazonaws.com/devopsthehardway-ecr-repo:latest
+        image: devopsthehardwayacr.azurecr.io/uberapp:v1
         ports:
         - containerPort: 5000
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: uber-ui
+  annotations:
+    kubernetes.io/ingress.class: azure/application-gateway
+spec:
+  rules:
+    - http:
+        paths:
+          - path: /
+            backend:
+              serviceName: uber-ui
+              servicePort: 80
