--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,62 +1,86 @@
 name: CI
 
 on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
-  terraform:
-    name: 'Terraform'
+  terraform-fmt-check:
+    if: github.event_name == 'pull_request'
+    defaults:
+      run:
+        working-directory: "./Terraform-AZURE-Services-Creation/AKS"
+    name: Terraform
+    environment: production
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
-      TF_VERSION: 1.5.7
-    runs-on: ubuntu-latest
-    environment: production
- 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
- 
+      tf_resource_group_name: "thomasthorntoncloud"
+      tf_storage_account_name: "thomasthorntontfstate"
+      tf_state_container: "devopsthehardwaygithub"
+      tf_state_key: "terraform.tfstate"
     steps:
-    # Checkout the repository to the GitHub Actions runner
-    - name: Checkout
-      uses: actions/checkout@v4
- 
-    - name: 'Terraform Format'
-      uses: hashicorp/terraform-github-actions@master
+    - name: Checkout Code
+      uses: actions/checkout@v2.5.0
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
       with:
-        tf_actions_version: ${{ env.TF_VERSION }}
-        tf_actions_subcommand: 'fmt'
-        tf_actions_working_dir: "./Terraform-AZURE-Services-Creation/AKS"
-         
-    - name: 'Terraform Init'
-      uses: hashicorp/terraform-github-actions@master
+        terraform_version: 1.7.4
+        terraform_wrapper: true
+
+    - name: Terraform Init
+      id: init
+      run: terraform init
+      env:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+      working-directory: "./Terraform-AZURE-Services-Creation/AKS"
+
+    - name: Terraform Fmt
+      id: fmt
+      run: terraform fmt
+      working-directory: "./Terraform-AZURE-Services-Creation/AKS"
+
+    - name: Auto Commit Changes
+      uses: stefanzweifel/git-auto-commit-action@v5
       with:
-        tf_actions_version: ${{ env.TF_VERSION }}
-        tf_actions_subcommand: 'init'
-        tf_actions_working_dir: "./Terraform-AZURE-Services-Creation/AKS"
- 
-    - name: 'Terraform Validate'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: ${{ env.TF_VERSION }}
-        tf_actions_subcommand: 'validate'
-        tf_actions_working_dir: "./Terraform-AZURE-Services-Creation/AKS"
-         
-    - name: 'Terraform Plan'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: ${{ env.TF_VERSION }}
-        tf_actions_subcommand: 'plan'
-        tf_actions_working_dir: "./Terraform-AZURE-Services-Creation/AKS"
- 
-    - name: Terraform Apply
+        commit_message: "Terraform fmt"
+        file_pattern: "*.tf *.tfvars"
+        commit_user_name: "github-actions[bot]"
+
+    - name: Terraform Plan  
+      id: plan
+      run: terraform plan -no-color -input=false
+      env:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+        DEPLOYMENT_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      working-directory: "./Terraform-AZURE-Services-Creation/AKS"
+      continue-on-error: false
+
+    - name: Terraform Apply  
+      id: apply
+      run: terraform apply -auto-approve -input=false
       if: github.ref == 'refs/heads/main'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: ${{ env.TF_VERSION }}
-        tf_actions_subcommand: 'apply'
-        tf_actions_working_dir: "./Terraform-AZURE-Services-Creation/AKS"
+      env:
+        ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
+        ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
+        ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
+      working-directory: "./Terraform-AZURE-Services-Creation/AKS"
+      continue-on-error: false
