AWS account specifc changes

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,9 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# AWS dist
+AWS/dist
+awscliv2.zip
+install
+THIRD_PARTY_LICENSES
