--- a/kubernetes_manifest/deployment.yml
+++ b/kubernetes_manifest/deployment.yml
@@ -2,13 +2,18 @@ apiVersion: v1
 kind: Service
 metadata:
   name: uber-ui
+  namespace: uber-dev
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "external"
+    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
 spec:
   selector:
     app: uber-ui
   ports:
   - protocol: "TCP"
-    port: 6000
-    targetPort: 5000
+    port: 80
+    targetPort: 80
   type: LoadBalancer
 
 ---
@@ -16,6 +21,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: uber-ui
+  namespace: uber-dev
 spec:
   selector:
     matchLabels:
